<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">SKK for Ziio</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,。、;:!?\n()[]*&amp;@{}&lt;&gt;_+=|&quot;</string>
    
    
    <!-- Title for Latin keyboard  -->
    <string name="english_ime_name">Android keyboard</string>
    <!-- Title for Latin keyboard settings activity / dialog -->
    <string name="english_ime_settings">Android keyboard settings</string>

    <!-- Option to provide vibrate/haptic feedback on keypress -->
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <!-- Option to play back sound on keypress in soft keyboard -->
    <string name="sound_on_keypress">Sound on keypress</string>
    
    <!-- Option to enable using nearby keys when correcting/predicting -->
    <string name="hit_correction">Correct typing errors</string>
    
    <!-- Description for hit_correction  -->
    <string name="hit_correction_summary">Enable input error correction</string>
    
    <!-- Option to enable using nearby keys when correcting/predicting in landscape-->
    <string name="hit_correction_land">Landscape input errors</string>
    
    <!-- Description for hit_correction in landscape -->
    <string name="hit_correction_land_summary">Enable input error correction</string>
    
    <!-- Option to automatically correct word on hitting space -->
    <string name="auto_correction">Word suggestions</string> 
    
    <!-- Description for auto_correction -->
    <string name="auto_correction_summary">Automatically correct the previous word</string>
  
    <!-- Option to enable text prediction -->
    <string name="prediction">Word suggestions</string>
    <!-- Category title for text prediction -->
    <string name="prediction_category">Word suggestion settings</string>
    <!-- Description for text prediction -->
    <string name="prediction_summary">Enable auto completion while typing</string>
  
    <!-- Dialog title for auto complete choices -->
    <string name="auto_complete_dialog_title">Auto completion</string>
    
    <!-- Option to enable text prediction in landscape -->
    <string name="prediction_landscape">Increase text field size</string> 
    <!-- Description for text prediction -->
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
  
    <!-- Option to enable auto capitalization of sentences -->
    <string name="auto_cap">Auto-capitalization</string> 
    <!-- Description for auto cap -->
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <!-- Option to enable auto punctuate -->
    <string name="auto_punctuate">Auto-punctuate</string> 
    <!-- Description for auto punctuate -->
    <string name="auto_punctuate_summary"></string>
    
    <!-- Option to enable quick fixes -->
    <string name="quick_fixes">Quick fixes</string>
    <!-- Description for quick fixes -->
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    
    <!-- Option to enable showing suggestions -->
    <string name="show_suggestions">Show suggestions</string>
    <!-- Description for show suggestions -->
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    
    <!-- Option to enable auto completion -->
    <string name="auto_complete">Auto-complete</string>
    <!-- Description for auto completion -->
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    
    <!-- Array of prediction modes -->
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    
    <!-- Don't translate -->
    <string name="prediction_none" >0</string>
    <!-- Don't translate -->
    <string name="prediction_basic">1</string>
    <!-- Don't translate -->
    <string name="prediction_full" >2</string>

    <string-array name="prediction_modes_values">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>

    <!-- Indicates that a word has been added to the dictionary -->
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <!-- Accented forms of "a" -->
    <string name="alternates_for_a">àáâãäåæ</string>
    <!-- Accented forms of "e" -->
    <string name="alternates_for_e">èéêë</string>
    <!-- Accented forms of "i" -->
    <string name="alternates_for_i">ìíîï</string>
    <!-- Accented forms of "o" -->
    <string name="alternates_for_o">òóôõöœø</string>
    <!-- Accented forms of "u" -->
    <string name="alternates_for_u">ùúûü</string>
    <!-- Letters associated with "s" -->
    <string name="alternates_for_s">§ß</string>
    <!-- Accented forms of "n" -->
    <string name="alternates_for_n">ñ</string>
    <!-- Accented forms of "c" -->
    <string name="alternates_for_c">ç</string>
    <!-- Accented forms of "y" -->
    <string name="alternates_for_y">ýÿ</string>
    <!-- Accented forms of "z" -->
    <string name="alternates_for_z"></string>
    
    <!-- Tip to long press on keys -->
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <!-- Tip to dismiss keyboard -->
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <!-- Tip to press ?123 to access numbers and symbols -->
    <string name="tip_access_symbols">Access numbers and symbols</string>    
    <!-- Tip to long press on typed word to add to dictionary -->
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary
        </string>
        
    <!-- Instruction to touch the bubble to continue -->
    <string name="touch_to_continue">Touch this hint to continue »</string>
    
    <!-- Instruction to touch the bubble to start typing -->
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    
    <!-- Tutorial tip 1 - The keyboard opens any time you touch a text field -->
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    
    <!-- Tutorial tip 2 - Touch and hold a key to view accents (examples) -->
    <string name="tip_to_view_accents"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b>
    </string>
    
    <!-- Tutorial tip 3 - How to switch to number/symbol keyboard -->
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    
    <!-- Tutorial tip 4 - How to switch back to alphabet keyboard -->
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    
    <!-- Tutorial tip 5 - How to launch keyboard settings -->
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    
    <!-- Tutorial tip 6 - Done with the tutorial -->
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    
    
    <!-- Label for soft enter key when it performs GO action.  Must be short to fit on key! -->
    <string name="label_go_key">Go</string>
    <!-- Label for soft enter key when it performs NEXT action.  Must be short to fit on key! -->
    <string name="label_next_key">Next</string>
    <!-- Label for soft enter key when it performs DONE action.  Must be short to fit on key! -->
    <string name="label_done_key">Done</string>
    <!-- Label for soft enter key when it performs SEND action.  Must be short to fit on key! -->
    <string name="label_send_key">Send</string>
    <!-- Label for "switch to symbols" key.  Must be short to fit on key! -->
    <string name="label_symbol_key">\?123</string>
    <!-- Label for "switch to numeric" key.  Must be short to fit on key! -->
    <string name="label_phone_key">123</string>
    <!-- Label for "switch to alphabetic" key.  Must be short to fit on key! -->
    <string name="label_alpha_key">ABC</string>
    <!-- Label for ALT modifier key.  Must be short to fit on key! -->
    <string name="label_alt_key">ALT</string>
    
	<string name="label_extdic_activity">辞書ファイル解凍</string>
	<string name="label_pref_activity">SKK for Ziioの設定</string>
	<string name="label_dictdir_activity">辞書ディレクトリ</string>
	<string name="label_dictool_activity">SKK ユーザー辞書ツール</string>
	<string name="label_import_textdic">インポート\nテキストファイル辞書</string>
	<string name="label_import_dic">インポート\nSKK for Ziio辞書</string>
	<string name="label_clear_userdic">ユーザー辞書初期化</string>
	<string name="label_backup_dic">SDカードに出力</string>
	<string name="label_no_entry_found">エントリがありません</string>

	<string name="label_filechooser_save_as">名前をつけて保存</string>
	<string name="label_filechooser_open">ファイルを開く</string>
	<string name="error_access_failed">アクセスできません: %1$s</string>

	<string name="message_extract">辞書ファイルを解凍中...</string>
	<string name="message_cancelled">中断しました</string>
	<string name="message_finished">解凍終了</string>
	<string name="message_confirm_remove">このエントリを削除しますか？\n登録キー: </string>
	<string name="message_confirm_clear">現在のユーザー辞書の内容はすべて消去されます．よろしいですか？</string>
	<string name="message_written_to_external_storage">ユーザー辞書をテキスト形式で保存しました: %1$s</string>

	<string name="error_dic">辞書ファイルを開けません．設定画面から，「辞書ファイル解凍」を実行してください</string>
	<string name="error_user_dic">ユーザー辞書が開けません</string>
	<string name="error_file_not_found">ファイルがありません: %1$s</string>

	<string name="label_YES">はい</string>
	<string name="label_NO">いいえ</string>
	<string name="label_OK">OK</string>
	<string name="label_CANCEL">キャンセル</string>
    
</resources>
