<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="2sp"
	>

	<ListView
		android:id="@+id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		/>
	<TextView
		android:id="@+id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/label_no_entry_found"
		android:layout_weight="1"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/ButtonImportTextDic"
			android:text="@string/label_import_textdic"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			/>
		<Button
			android:id="@+id/ButtonImportDic"
			android:text="@string/label_import_dic"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/ButtonBackup"
			android:text="@string/label_backup_dic"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			/>
		<Button
			android:id="@+id/ButtonClear"
			android:text="@string/label_clear_userdic"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			/>
	</LinearLayout>
</LinearLayout>

